# serializer version: 1
# name: test_migrate_process_sensor[after_migration]
  list([
    ConfigEntrySnapshot({
      'data': dict({
      }),
      'disabled_by': None,
      'domain': 'systemmonitor',
      'entry_id': <ANY>,
      'minor_version': 2,
      'options': dict({
        'binary_sensor': dict({
          'process': list([
            'python3',
            'pip',
          ]),
        }),
        'resources': list([
          'disk_use_percent_/',
          'disk_use_percent_/home/notexist/',
          'memory_free_',
          'network_out_eth0',
          'process_python3',
        ]),
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'System Monitor',
      'unique_id': None,
      'version': 1,
    }),
  ])
# ---
# name: test_migrate_process_sensor[before_migration]
  list([
    ConfigEntrySnapshot({
      'data': dict({
      }),
      'disabled_by': None,
      'domain': 'systemmonitor',
      'entry_id': <ANY>,
      'minor_version': 2,
      'options': dict({
        'binary_sensor': dict({
          'process': list([
            'python3',
            'pip',
          ]),
        }),
        'resources': list([
          'disk_use_percent_/',
          'disk_use_percent_/home/notexist/',
          'memory_free_',
          'network_out_eth0',
          'process_python3',
        ]),
        'sensor': dict({
          'process': list([
            'python3',
            'pip',
          ]),
        }),
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': 'System Monitor',
      'unique_id': None,
      'version': 1,
    }),
  ])
# ---
